cluster-apps/cloud/itscontained/secret-manager/externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-com
spec:
  type: ExternalName
  externalName: github.com
  ports:
    - port: 443
