cluster-apps/cloud/itscontained/secret-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.middlewares: cajun-pro-secret-manager-github-com@kubernetescrd
    cert-manager.io/cluster-issuer: le-production
  name: secret-manager-itscontained-io
spec:
  rules:
    - host: secret-manager.itscontained.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-com
                port:
                  number: 443
  tls:
    - hosts: [secret-manager.itscontained.io]
      secretName: secret-manager-itscontained-io
